# SyllaScan

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
static/: app.py
