[project]
name = "dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "flask>=3.1.2",
    "flask-session>=0.8.0",
    "google-cloud-vision>=3.10.2",
    "google-generativeai>=0.8.5",
    "gunicorn>=23.0.0",
    "matplotlib>=3.10.6",
    "pymupdf>=1.26.4",
    "python-docx>=1.2.0",
]
